# Project-Source-File

./: .gitignore  CMakeLists.txt  runsystem.sh
arduino files/flashwithoutdelay/: flashwithoutdelay.ino
include/: camera_initiation.h  example_helper.h
src/: Acquisition.cpp  Trigger.cpp  Trigger_QuickSpin.cpp  dmd_grayscale_triggerin_example.cpp  example_helper.cpp  flowchart.md  main.cpp
src/testcode/: Trigger.cpp
